containers/kubernetes/postgres/pg.svc.yaml
# --------------------------------------------------------------------
# -- Debugging:
# kubectl describe svc postgres-svc
# kubectl get svc postgres-svc
#
# kubectl logs --selector app=postgres
# kubectl get events --namespace=default
#
#
# -- Access inside cluster:
# postgres-svc:5432
#
# -- Access outside cluster:
# -- See postgres.ing.yaml
# --------------------------------------------------------------------

apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres-svc
  namespace: default

spec:

  # -- Headless Service (no IP allocated)
  # -- Access directly thru the Pod
  # clusterIP: None

  ports:
    - name: pg-port
      protocol: TCP
      # -- exposed (other pods within cluster)
      port: 5432
      # -- inside the container (container app listens on this port)
      targetPort: 5432
      # -- outside the cluster
      nodePort: 30737

  selector:
    app: postgres

  # -- Only accessible inside cluster
  # type: ClusterIP

  # -- Same port exposed on all nodes in cluster
  # -- Default range: 30000-32767
  type: NodePort
